--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.profiles.active=development
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8083/auth/realms/thisdatascience
 spring.security.oauth2.resourceserver.jwt.set-uri=http://localhost:8083/auth/realms/thisdatascience/protocol/openid-connect/certs
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/thisdatascience
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
+spring.datasource.username=myuser
+spring.datasource.password=secret
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.defer-datasource-initialization=false
@@ -20,7 +20,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.show-sql=true
 
 spring.flyway.locations=classpath:db/migrations
-spring.flyway.schemas=thisdatascience
+spring.flyway.schemas=public
 spring.flyway.enabled=true
 
 logging.level.org.hibernate.SQL=DEBUG
